--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Unsmoke"
         tools:targetApi="31">
         <activity
+            android:name=".ui.shop.ShopActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.auth.newpassword.NewPasswordActivity"
             android:exported="false" />
         <activity
@@ -40,7 +43,7 @@
             android:exported="true" />
         <activity
             android:name=".ui.boarding.OnboardingActivity"
-            android:exported="true"/>
+            android:exported="true" />
     </application>
 
 </manifest>
