--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Unsmoke"
         tools:targetApi="31">
         <activity
+            android:name=".ui.healtimprovement.holdbreath.HoldBreathActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.shop.ShopActivity"
             android:exported="false" />
         <activity
