--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Unsmoke"
         tools:targetApi="31">
+        <receiver
+            android:name=".ui.widget.UnsmokeWidget"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <intent-filter android:priority="1" >
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.ACTION_EXTERNAL_APPLICATIONS_AVAILABLE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/unsmoke_widget_info" />
+        </receiver>
+
         <activity
             android:name=".ui.healtimprovement.holdbreath.HoldBreathActivity"
             android:exported="false" />
