--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -18,10 +18,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Unsmoke"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.journal.JournalActivity"
+            android:exported="false" />
+
         <receiver
             android:name=".ui.notification.MyDailyReminderReceiver"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true" />
         <receiver
             android:name=".ui.widget.UnsmokeWidget"
             android:exported="false">
