feat: create logic for work manager and create feature to update widget base on work manager

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Unsmoke"
         tools:targetApi="31">
+        <receiver
+            android:name=".background.BootReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
         <activity
             android:name=".ui.ismoke.IsmokeActivity"
             android:exported="false" />
@@ -31,7 +40,7 @@
             android:exported="true" />
         <receiver
             android:name=".ui.widget.UnsmokeWidget"
-            android:exported="false">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
