--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,9 +28,11 @@ pagingRuntimeKtx = "3.3.0"
 room = "2.6.1"
 ksp = "1.9.0-1.0.13"
 roomPaging = "2.6.1"
+workRuntimeKtx = "2.9.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "workRuntimeKtx" }
 generativeai = { module = "com.google.ai.client.generativeai:generativeai", version.ref = "generativeai" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
