feat: create edit profile and setup repository and the data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Unsmoke"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.main.profile.editprofile.EditProfileActivity"
+            android:exported="false" />
+
         <receiver
             android:name=".background.BootReceiver"
             android:enabled="true"
